@@ -7,7 +7,7 @@ spring_clouds=(spring-cloud-greenwich)
 java_version=$(java -version 2>&1 | awk -F '"' '/version/ {print $2}')
 if  [[ ${java_version} == 11* ]] ;
 then
-    export ADD_JAVA_MOD="--add-modules java.logging --add-reads java.base=java.logging"
+    export ADD_JAVA_MOD="--add-reads java.base=java.logging"
 fi
 
 
